kafka-eks/applications/monitoring/kafka-ui/kafka-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      tolerations:
      - key: "kafka"
        operator: "Equal"
        value: "true"
        effect: "NoSchedule"
      nodeSelector:
        role: "kafka"
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
