kafka-eks/applications/monitoring/kafka-ui/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kafka-ui.dataiesb.com
    http:
      paths:
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
